# mutant-kraken

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  convert_node.py  kodekraken.config.json  mutantkraken.config.json  report.html  stack_mutate.kt
.circleci/: config.yml
archive/: archive.rs
assets/: config.json
examples/: stack.kt
examples/mutations/: bigger_examples_mutate.kt  mutation_bigger_examples.kt  mutation_stack.kt  stack_mutate.kt
examples/project/: bigger_examples.kt  stack.kt
kotlin-test-projects/demo/src/main/kotlin/: Calculator.kt
kotlin-test-projects/kotlin-project/src/main/kotlin/: Calculator.kt
kotlin-test-projects/kotlin-project/src/test/kotlin/: CalculatorTest.kt
kotlin-test-projects/mutations/: BuildFails.kt  Killed.kt  Survived.kt
mutant-kraken/: Cargo.toml
mutant-kraken-kt-types-macro/: Cargo.toml
mutant-kraken-kt-types-macro/src/: lib.rs
mutant-kraken-macros/: Cargo.toml  README.md
mutant-kraken-macros/src/: lib.rs
mutant-kraken/assets/: about.txt
mutant-kraken/assets/mutation/: file1_source_code.html  mutation-report.css  mutation-report.html  prism.css  prism.js
mutant-kraken/src/: cli.rs  config.rs  gradle.rs  html_gen.rs  kotlin_types.rs  lib.rs  main.rs
mutant-kraken/src/mutation_tool/: mod.rs  operators.rs  tool.rs
mutant-kraken/src/report/: mod.rs
mutant-kraken/tests/kotlin-test-projects/demo/: mutantkraken.config.json  settings.gradle.kts
mutant-kraken/tests/kotlin-test-projects/no-gradle-project/: Calculator.kt
mutant-kraken/tests/mutant_kraken/: main.rs
scripts/: main.py  mutation_count_per_file.csv  mutation_operator_counts.csv
scripts/csvs/: algorithms-kotlin.csv
scripts/outputs/: Kotlin-mutations.json  Kotson-mutations.json  config4k-mutations.json  jackson-module-kotlin-mutations.json  javalin-mutations.json  kotless-mutations.json  kotlin-telegram-bot-mutations.json  moshi-mutations.json  neo4j-graphql-mutations.json  pest-intellij-mutations.json  retroauth-mutations.json
src/: about.txt  bigger_examples.kt  cli.rs  config.rs  error.rs  gradle.rs  html_gen.rs  kotlin_types.rs  lib.rs  main.rs  mutate.rs  mutation.rs  mutation_operators.rs  mutation_tool.rs  stack.kt
src/mutation_tool/: builder.rs  mod.rs  mutation.rs  operators.rs  tool.rs
src/test_config/: mod.rs
tests/kode_kraken/: main.rs
tests/kotlin-project/src/main/kotlin/: MyMath.kt
tests/kotlin-project/src/test/kotlin/: CalculatorTest.kt  MyMathTest.kt
tests/kotlin-test-projects/demo/: build.gradle.kts  kodekraken.config.json  mutantkraken.config.json
tests/kotlin-test-projects/demo/kode-kraken-dist/: output.csv  report.html
tests/kotlin-test-projects/demo/kode-kraken-dist/backups/: Calculator.kt
tests/kotlin-test-projects/demo/kode-kraken-dist/mutations/: 0bc6d9de-5412-40a8-855b-fe54699b087c_Calculator.kt  1e43ef14-da7d-4816-bccd-6b5e8511e3f7_Calculator.kt  30a1e7a8-1658-4e2e-8f6d-9c520cb1d506_Calculator.kt  (+25 more)
tests/kotlin-test-projects/mutations/: Killed.kt  Survived.kt
~/.cache/zsh/compcache/: brew_casks  brew_formulae
(+6 files in other folders)
