[package]
name = "kode-kraken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  { version = "4.1.6", features = ["derive"] }
rand = "0.8.5"
serde_json = "1.0.93"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tree-sitter = "0.20.9"
tree-sitter-kotlin = "0.2.11"
