[package]
name = "kode-kraken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  { version = "4.1.6", features = ["derive"] }
cli-table = "0.4.7"
rand = "0.8.5"
rayon = "1.7.0"
serde_json = "1.0.93"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tree-sitter = "0.20.9"
tree-sitter-kotlin = "0.2.11"
uuid = { version = "1.3.0", features = ["v4"] }
wait-timeout = "0.2.0"
