[package]
name = "mutant-kraken-macros"
version = "0.1.0"
edition = "2021"
authors = ["Josue Molina Morales <molinajosue92@hotmail.com>"]
description = "Procedural macros for mutant-kraken"
repository = "https://github.com/JosueMolinaMorales/mutant-kraken"
keywords = ["mutation", "testing", "kotlin"]
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.119"
syn = "2.0.68"
proc-macro2 = "1.0"
tree-sitter-kotlin = "0.3.6"